# scraping-poi-osm-googlemap

./: .gitignore  README.md  pyproject.toml  scraping_osm.html  tranlation.yaml
.github/workflows/: static.yml
data/: hospitals_paris.json
notebooks/: hospitals_paris.json  scraping_osm.html  scraping_osm.qmd
src/: scraping_osm.py
